@@ -4,6 +4,8 @@
 \name{convert}
 \alias{convert}
 \alias{convertFromBIOM}
+\alias{convertToBIOM}
+\alias{convertToBIOM,SummarizedExperiment-method}
 \alias{convertFromDADA2}
 \alias{convertFromPhyloseq}
 \alias{convertToPhyloseq}
@@ -21,6 +23,10 @@ convertFromBIOM(
   remove.artifacts = FALSE,
   ...
 )
+
+convertToBIOM(x, assay.type = "counts", ...)
+
+\S4method{convertToBIOM}{SummarizedExperiment}(x, assay.type = "counts", ...)
 
 convertFromDADA2(...)
 
@@ -101,6 +107,10 @@ objects to phyloseq objects.
 \code{\link[TreeSummarizedExperiment:TreeSummarizedExperiment-class]{TreeSummarizedExperiment}}
 object.
 
+\code{convertFromBIOM} coerces a
+\code{\link[TreeSummarizedExperiment:TreeSummarizedExperiment-class]{TreeSummarizedExperiment}}
+object to a \code{\link[biomformat:biom-class]{biom}} object.
+
 \code{convertFromDADA2} is a wrapper for the
 \code{mergePairs} function from the \code{dada2} package.
 A count matrix is constructed via
@@ -122,15 +132,19 @@ from \code{assay} is added to the phyloseq object.
 }
 \examples{
 
-### Convert BIOM results to a TreeSE
+# Convert BIOM results to a TreeSE
 # Load biom file
 library(biomformat)
 biom_file <- system.file("extdata", "rich_dense_otu_table.biom",
                          package = "biomformat")
 
-# Make TreeSE from biom object
+# Make TreeSE from BIOM object
 biom_object <- biomformat::read_biom(biom_file)
 tse <- convertFromBIOM(biom_object)
+
+# Convert TreeSE object to BIOM
+biom <- convertToBIOM(tse)
+
 
 ### Coerce DADA2 results to a TreeSE object
 if(requireNamespace("dada2")) {
